test/files/neg/permanent-blindness.check
permanent-blindness.scala:12: warning: imported `Bippy' is permanently hidden by definition of class Bippy in package bar
  import foo.{ Bippy, Bop, Dingus }
               ^
permanent-blindness.scala:12: warning: imported `Bop' is permanently hidden by definition of object Bop in package bar
  import foo.{ Bippy, Bop, Dingus }
                      ^
permanent-blindness.scala:12: warning: imported `Dingus' is permanently hidden by definition of object Dingus in package bar
  import foo.{ Bippy, Bop, Dingus }
                           ^
error: No warnings can be incurred under -Werror.
three warnings found
one error found
